--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -1,8 +1,12 @@
 .video-card {
   perspective: 1000px;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .video-card-inner {
+  max-width: 100%;
+  box-sizing: border-box;
   position: relative;
   width: 100%;
   height: 0;
